--- a/src/index.html
+++ b/src/index.html
@@ -7,43 +7,52 @@
     <title>Document</title>
   </head>
   <body>
+
     <h1 class="title">whack a monster</h1>
     <div class="text-wrapper">
       <p class="text">hit: <span class="score hit">0</span></p>
       <p class="text">miss: <span class="score miss">0</span></p>
+      <p class="text">time: <span class="score time">00</span></p>
     </div>
-    <div class="field">
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-      <div class="hole"></div>
-    </div>
+    <div class="field"></div>
     <div class="cursor"></div>
 
-    <div class="popup">
+    <div class="start-container">
+      <img
+        class="popup-img"
+        src="./images/teufel-hello.png"
+        width="170px"
+        alt="start game"
+      />
+      <button class="btn start-game">start game</button>
+    </div>
+
+    <div class="popup game-over-popup">
       <div class="popup-wrap">
         <h3 class="popup-title">game over</h3>
         <img
           class="popup-img"
-          src="../images/teufel-start.png"
+          src="./images/teufel-restart.png"
           width="170px"
           alt="teufel"
         />
-        <button class="start">start again</button>
+        <button class="btn start-again">start again</button>
       </div>
     </div>
+
+    <div class="popup win-popup">
+      <div class="popup-wrap">
+        <h3 class="popup-title">you win</h3>
+        <img
+          class="popup-img"
+          src="./images/teufel-hit.png"
+          width="170px"
+          alt="teufel"
+        />
+        <button class="btn start-again">start again</button>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
